other files link added for index file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
         <title>Restaurent Management System</title>
     </head>
     <body>
-        <h1 align="center">Sairaj Family Restaurent</h1>
+        <h1 align="center">Sairaj Family Restaurent</h1><hr>
+        <a href="index.html"><b><u>Home</u></b></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="login.html"><u>Login</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="about.html"><u>About</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="contact.html"><u>Contact</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="menu.html"><u>Menu</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="gallery.html"><u>Gallery</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
     </body>
+
 </html>
