other files link added to login file

--- a/pages/login.html
+++ b/pages/login.html
@@ -4,5 +4,11 @@
     </head>
     <body>
         <h1 align="center">Sairaj Family Restaurent</h1>
+        <a href="index.html"><u>Home</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="login.html"><b><u>Login</u></b></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="about.html"><u>About</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="contact.html"><u>Contact</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="menu.html"><u>Menu</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="gallery.html"><u>Gallery</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
     </body>
 </html>
