heading, icon, files and images added

--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <html>
     <head>
         <title>Restaurent Management System</title>
-    </head>
+    
     <body>
-        <h1 align="center">Sairaj Family Restaurent</h1><hr>
-        <a href="index.html"><b><u>Home</u></b></a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="login.html"><u>Login</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="about.html"><u>About</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="contact.html"><u>Contact</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="menu.html"><u>Menu</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="gallery.html"><u>Gallery</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <h1 align="center">
+            <img src="././images/flower-icon.jpeg" height="10px" width="10px"/>
+            <img src="././images/flower-icon.jpeg" height="15px" width="15px"/>
+            <img src="././images/flower-icon.jpeg" height="20px" width="25px"/>
+            <b>Sairaj Family Restaurent</b>
+            <img src="././images/flower-icon.jpeg" height="20px" width="25px"/>
+            <img src="././images/flower-icon.jpeg" height="15px" width="15px"/>
+            <img src="././images/flower-icon.jpeg" height="10px" width="10px"/>
+        </h1><hr>
+        <b><u>Home</u></b>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="./pages/login.html"><u>Login</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="./pages/contact.html"><u>Contact</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="./pages/menu.html"><u>Menu</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="./pages/gallery.html"><u>Gallery</u></a>&nbsp;&nbsp;&nbsp;&nbsp;<hr><br>
+
+        <img src="././images/sairaj.jpeg" height="500px" width="1000px"/> 
     </body>
 
 </html>
