--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,6 +3,32 @@
         <title>Restaurent Management System</title>
     </head>
     <body>
-        <h1 align="center">Sairaj Family Restaurent</h1>
+        <h1 align="center">
+            <img src="./../images/flower-icon.jpeg" height="10px" width="10px"/>
+            <img src="./../images/flower-icon.jpeg" height="15px" width="15px"/>
+            <img src="./../images/flower-icon.jpeg" height="20px" width="25px"/>
+            <b>Sairaj Family Restaurent</b>
+            <img src="./../images/flower-icon.jpeg" height="20px" width="25px"/>
+            <img src="./../images/flower-icon.jpeg" height="15px" width="15px"/>
+            <img src="./../images/flower-icon.jpeg" height="10px" width="10px"/>
+        </h1><hr>
+        <a href="./../index.html"><u>Home</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="login.html"><u>Login</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <b><u>Contact</u></b>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="menu.html"><u>Menu</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="gallery.html"><u>Gallery</u></a>&nbsp;&nbsp;&nbsp;&nbsp;<hr>
+
+        <h3>Contact info</h3>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d808470.3670875701!2d74.37811266850485!3d18.49304821006783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc3191d0c3a0b7f%3A0xdbbbc5ae471ed5ea!2sHotel%20Sairaj%20restaurant%20and%20bar!5e1!3m2!1sen!2sin!4v1722624536420!5m2!1sen!2sin" width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe><br>
+    
+        <h4>
+            <img src="./../images/location.jpeg" height="20px" width="15px"/>&nbsp;
+            <b>Kedgaon (Toll Plaza) , Kedgaon, India, 412203</b>
+        </h4>
+        <h4>
+            <img src="./../images/email.jpeg" height="15px" width="15px"/>&nbsp;
+            <b>hotelsairaj5251@gmail.com</b>
+        </h4>
+
     </body>
 </html>
