--- a/pages/menu.html
+++ b/pages/menu.html
@@ -3,6 +3,38 @@
         <title>Restaurent Management System</title>
     </head>
     <body>
-        <h1 align="center">Sairaj Family Restaurent</h1>
-    </body>
+        <h1 align="center">
+            <img src="./../images/flower-icon.jpeg" height="10px" width="10px"/>
+            <img src="./../images/flower-icon.jpeg" height="15px" width="15px"/>
+            <img src="./../images/flower-icon.jpeg" height="20px" width="25px"/>
+            <b>Sairaj Family Restaurent</b>
+            <img src="./../images/flower-icon.jpeg" height="20px" width="25px"/>
+            <img src="./../images/flower-icon.jpeg" height="15px" width="15px"/>
+            <img src="./../images/flower-icon.jpeg" height="10px" width="10px"/>
+        </h1><hr>
+        <a href="./../index.html"><u>Home</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="login.html"><u>Login</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="contact.html"><u>Contact</u></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <b><u>Menu</u></b>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="gallery.html"><u>Gallery</u></a>&nbsp;&nbsp;&nbsp;&nbsp;<hr>
+        <h2>Dinner :</h2>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="./../images/biryani.jpeg" height="250px" width="200px"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   
+        <img src="./../images/special_thali.jpeg" height="250px" width="200px"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    
+        <img src="./../images/Masala_Papad.jpeg" height="250px" width="200px"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <img src="./../images/tandoor-chicken.jpeg" height="250px" width="200px"/>&nbsp;&nbsp;&nbsp;&nbsp;<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="./../images/dosa,jpeg.jpg" height="250px" width="200px"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+        <img src="./../images/marvadi.jpeg" height="250px" width="200px"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    
+        <img src="./../images/Anda-Thali.jpeg" height="250px" width="200px"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   
+        <img src="./../images/fish.jpeg" height="250px" width="200px"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <hr>  
+
+        <h2>Coal Drinks :</h2>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="./../images/(1).jpeg" height="250px" width="200px"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   
+        <img src="./../images/(2).jpeg" height="250px" width="200px"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    
+        <img src="./../images/(3).jpeg" height="250px" width="200px"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+        <img src="./../images/(4).jpeg" height="250px" width="200px"/>&nbsp;&nbsp;&nbsp;&nbsp;<br>  
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="./../images/(5).jpeg" height="250px" width="200px"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+          <img src="./../images/(6).jpeg" height="250px" width="200px"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    
+        <img src="./../images/(7).jpeg" height="250px" width="200px"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    
+        <img src="./../images/(8).jpeg" height="250px" width="200px"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;        
+    </body>     
 </html>
